--- a/package.json
+++ b/package.json
@@ -6,9 +6,25 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^25.2.2",
+    "@types/node": "^14.0.1",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "antd": "^4.2.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
+    "firebase": "^7.14.4",
+    "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
+    "mobx-react-lite": "^3.2.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "recharts": "^1.8.5",
+    "typescript": "^3.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/recharts": "^1.8.10"
   }
 }
