добавление и скачивание файлов работает

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^4.2.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "file-saver": "^2.0.5",
     "firebase": "^7.14.4",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
